tests/fail/function_did_not_return.parallel
/*
function did not return
8  |
9  |function main(): Void {
             ^^^^
10 |
*/

function main(): Void {

}